2018-07-19  David Anderson
  * DWARFTEST.sh,test-alex1/runtest.sh,test-alex2/runtime.sh: 
    Had to pass more information so out-of-trunk source 
    build got key data for compiles in these tests.
2018-06-08  David Anderson
  * DWARFTEST.sh: Now provides identifying string to the Count output.
  * runtimesummary: New data
  * usertime.py: Now prints the identifying string passed in.
    Easier to understand what runtime is what.
2018-04-17  David Anderson
  * A runtest of emre5 directory objects was typed 
    incorrectly and has only been
    generating a usage message for quite some time.
    It now tests dwp and tied files as it is supposed to.
  * README.txt: Now mentions that at least one test
    assumes that a segmentation violation will create a
    core file (the test fails if ulimit or something else
    prevents or moves core files).
2018-01-29  David Anderson
  * dwarfdump-i386-freebsd.O,dwarfdump-x86_64-freebsd.O: 
    New baselines
    FreeBSD 9 versions simply won't run on FreeBSD 11.1.
    So now we start afresh with a new FreeBSD 11.1
    environment.
  * sarubbo-11/*.bin: New tests related to reading
    corrupt frame data. 

